--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,4 @@
+// Importing all the styles of every component
 @import './components/reset';
 @import './fonts/_fonts.scss';
 @import './components/app';
