small style fixes, changed default user info

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -104,6 +104,7 @@
 
     //  Image of the user
     &-avatar {
+      object-fit: cover;
       border-radius: 50%; // Setting border radius
       height: 4rem;
       width: 4rem;
